# restapi/operations/auth_user_responses.go
@@ -1,0 +1,93 @@
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-swagger/go-swagger/httpkit"
+
+	"github.com/gophergala2016/wwcdc_01/models"
+)
+
+/*AuthUserOK success response
+
+swagger:response authUserOK
+*/
+type AuthUserOK struct {
+}
+
+// NewAuthUserOK creates AuthUserOK with default headers values
+func NewAuthUserOK() *AuthUserOK {
+	return &AuthUserOK{}
+}
+
+// WriteResponse to the client
+func (o *AuthUserOK) WriteResponse(rw http.ResponseWriter, producer httpkit.Producer) {
+
+	rw.WriteHeader(200)
+}
+
+/*AuthUserForbidden fail response
+
+swagger:response authUserForbidden
+*/
+type AuthUserForbidden struct {
+}
+
+// NewAuthUserForbidden creates AuthUserForbidden with default headers values
+func NewAuthUserForbidden() *AuthUserForbidden {
+	return &AuthUserForbidden{}
+}
+
+// WriteResponse to the client
+func (o *AuthUserForbidden) WriteResponse(rw http.ResponseWriter, producer httpkit.Producer) {
+
+	rw.WriteHeader(403)
+}
+
+/*AuthUserDefault unexpected error
+
+swagger:response authUserDefault
+*/
+type AuthUserDefault struct {
+	_statusCode int
+
+	// In: body
+	Payload *models.ErrorModel `json:"body,omitempty"`
+}
+
+// NewAuthUserDefault creates AuthUserDefault with default headers values
+func NewAuthUserDefault(code int) *AuthUserDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &AuthUserDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the auth user default response
+func (o *AuthUserDefault) WithStatusCode(code int) *AuthUserDefault {
+	o._statusCode = code
+	return o
+}
+
+// WithPayload adds the payload to the auth user default response
+func (o *AuthUserDefault) WithPayload(payload *models.ErrorModel) *AuthUserDefault {
+	o.Payload = payload
+	return o
+}
+
+// WriteResponse to the client
+func (o *AuthUserDefault) WriteResponse(rw http.ResponseWriter, producer httpkit.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		if err := producer.Produce(rw, o.Payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
